Fixed jumpstart images

--- a/Pages/JumpstartApocalypse/style.css
+++ b/Pages/JumpstartApocalypse/style.css
@@ -87,6 +87,7 @@ header nav button a:hover
     align-items: center;
     background-color: rgba(39, 40, 45, 1);
     background-image: url("/Media/Images/Projects/Jumpstart/blurred-cat-alley.png");
+    background-size: cover;
 }
 
 .projectSplash iframe
@@ -97,6 +98,7 @@ header nav button a:hover
 .projectContent
 {
     background-color: rgba(31, 32, 37, 1);
+    background-size: cover;
     display: flex;
     justify-content: center;
     background-image: url("/Media/Images/Projects/Jumpstart/noo.png");
@@ -166,6 +168,7 @@ header nav button a:hover
     display: flex;
     justify-content: center;
     background-image: url("/Media/Images/Projects/Jumpstart/blur.png");
+    background-size: cover;
 }
 
 li
